5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1712_2506.log
== TEST (2019-05-14 23:32:24) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

acum = 0
cont = 0

while(cont < q1):
	acum = acum + (q1 + (q1 * pn / 100) - qv)
	cont = cont + 1
if(q1 + qv > pn):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- OUTPUT:
EXTINCAO
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:34:13) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

acum = 0
cont = 0

while(cont < q1):
	acum = acum + (q1 + (q1 * pn / 100) - qv)
	cont = cont + 1
if(q1 + qv == 12000):
	print("LIMITE")
else:
	print("EXTINCAO")
print(cont)
-- OUTPUT:
EXTINCAO
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:34:23) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

acum = 0
cont = 0

while(cont < q1):
	acum = acum + (q1 + (q1 * pn / 100) - qv)
	cont = cont + 1
if(q1 + qv == 12000):
	print("LIMITE")
else:
	print("EXTINCAO")
print(cont)
-- OUTPUT:
EXTINCAO
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:36:05) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

acum = 0
cont = 0

while(cont < q1):
	acum = acum + (q1 + (q1 * pn / 100) - qv)
	cont = cont + 1
if(acum == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- OUTPUT:
LIMITE
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:36:33) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

acum = 0
cont = 0

while(cont < q1):
	acum =(q1 + (q1 * pn / 100) - qv)
	cont = cont + 1
if(acum == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- OUTPUT:
LIMITE
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:36:36) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

acum = 0
cont = 0

while(cont < q1):
	acum =(q1 + (q1 * pn / 100) - qv)
	cont = cont + 1
if(acum == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- EXECUTION TIME:
0.174633
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
1234
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
579
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
6789
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:36:38) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

acum = 0
cont = 0

while(cont < q1):
	acum =(q1 + (q1 * pn / 100) - qv)
	cont = cont + 1
if(acum == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- OUTPUT:
LIMITE
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:38:16) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(acum == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    if(acum == 0):
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:38:25) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(acum == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    if(acum == 0):
NameError: name 'acum' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:38:49) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:39:07) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:39:38) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:41:23) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:41:33) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:41:34) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:42:47) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(q1 < 12000 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:42:50) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(q1 < 12000 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- OUTPUT:
LIMITE
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:42:50) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(q1 < 12000 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- EXECUTION TIME:
0.651328
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
quantidade inicial de tambaquis:percentual de crescimento anual:quantidade de tambaquins pra venda:LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:44:32) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(q1 < 12000 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 >= 12000):
	print("LIMITE")
	print(cont)
else:
	print("EXTINCAO")
	print(cont)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:44:35) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(q1 < 12000 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 >= 12000):
	print("LIMITE")
	print(cont)
else:
	print("EXTINCAO")
	print(cont)
-- EXECUTION TIME:
0.5686
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:55:01) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
else:
	print("LIMITE")
print(cont)
-- EXECUTION TIME:
0.35831
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:

-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:58:01) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- EXECUTION TIME:
0.47122
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
quantidade inicial de tambaquis:percentual de crescimento anual:quantidade de tambaquins pra venda:LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
quantidade inicial de tambaquis:percentual de crescimento anual:quantidade de tambaquins pra venda:
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:59:01) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))

cont = 0

while(cont < q1 and q1 > 0 and pn > 0 and qv > 0):
	q1 = q1 + (q1 * pn / 100)
	q1 = q1 - qv
	cont = cont + 1
if(q1 == 0):
	print("EXTINCAO")
	print(cont)
else:
	print("LIMITE")
	print(cont)
-- EXECUTION TIME:
0.575801
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
LIMITE
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
quantidade inicial de tambaquis:percentual de crescimento anual:quantidade de tambaquins pra venda:
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 11:41:10) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))
a = q1
cont = 0

while(a < 12000 and a > 0):
	a = a + (a * pn / 100)
	a = a - qv
	cont = cont + 1
if(a >= 12000):
	print("LIMITE")
	print(cont)
else:
	print("EXTINCAO")
	print(cont)
-- OUTPUT:
EXTINCAO
14
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 11:41:14) 
-- CODE:
q1 = int(input("quantidade inicial de tambaquis:"))
pn = int(input("percentual de crescimento anual:"))
qv = int(input("quantidade de tambaquins pra venda:"))
a = q1
cont = 0

while(a < 12000 and a > 0):
	a = a + (a * pn / 100)
	a = a - qv
	cont = cont + 1
if(a >= 12000):
	print("LIMITE")
	print(cont)
else:
	print("EXTINCAO")
	print(cont)
-- EXECUTION TIME:
0.22542
-- TEST CASE 1:
---- input:
1234
6
135
---- correct output:
EXTINCAO
14
---- user output:
EXTINCAO
14
-- TEST CASE 2:
---- input:
579
37
26
---- correct output:
LIMITE
11
---- user output:
LIMITE
11
-- TEST CASE 3:
---- input:
6789
45
2345
---- correct output:
LIMITE
4
---- user output:
LIMITE
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
